--- a/fourth-task/index.html
+++ b/fourth-task/index.html
@@ -9,6 +9,6 @@
 <body>
     <script src="app.js"></script>
     <script src="app1.js"></script>
-<!--     <script src="app2.js"></script> -->
+    <script src="app2.js"></script>
 </body>
 </html>
